--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,9 +2,9 @@
     <h1 class="text-center" >Contact List</h1>
     <section class="row">
         <section class="col">
-            <form action="" method="post" class="search_form px-5 py-2">
-                <input type="text" class="form-control rounded-pill" placeholder="Search Contact">
-            </form>
+            <div  class="search_form px-5 py-2">
+                <input [(ngModel)]="letter" type="text" class="form-control rounded-pill" placeholder="Search Contact">
+            </div>
         </section>
     </section>
     <section class="contacts">
@@ -12,9 +12,10 @@
             <section class="col-sm-11"><p class="category p-1">Add New Contact</p></section>
             <section class="col-sm-1"><i class="fas fa-plus"></i></section>
         </section>
-        <section class="latest_contacts bg-white">
+        <!-- Latest contacts  -->
+        <section *ngIf="!letter" class="latest_contacts bg-white">
             <p class="category p-1">Latest Contacts</p>
-            <div class="media mb-2 p-1" *ngFor="let item of recentContacts">
+            <div class="media mb-2 p-1" *ngFor="let item of recentContacts;">
                 <a class="d-flex h-100" href="#">
                     <img [src]="item.image == null || undefined ? item.image:img" alt="" class="h-100">
                 </a>
@@ -24,9 +25,11 @@
                 </div>
             </div>
         </section>
-        <section class="contacts_list bg-white ">
-            <div class="category p-1">A</div>
-        <div class="media mb-2 p-1" *ngFor="let contact of contacts">
+        
+        <section class="position-relative">
+        <section class="contacts_list bg-white " *ngFor="let char of chars;">
+            <div class="category p-1">{{char}}</div>
+        <div class="media mb-2 p-1" *ngFor=" let contact of contacts|search:letter||char ;">
             <a class="d-flex h-100" href="#">
                 <img [src]="contact.image == null || undefined ? contact.image:img" alt="" class="h-100">
             </a>
@@ -36,10 +39,13 @@
             </div>
         </div>
     </section>
+    <section class="letters_bar h-100 " >
+            <div class="small" *ngFor="let char of chars;">{{char}}</div>
+        </section>
     </section>
+</section>
 
 
 </section>
 
 
-<!-- contact.image == null || undefined ? contact.image:img -->
