--- a/src/app/components/add-contact/add-contact.component.html
+++ b/src/app/components/add-contact/add-contact.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container p-2">
   <!-- Start The Form -->
   <form #f="ngForm" (ngSubmit)="addContact(f)" class="w-100" @fade>
     <h2 class="title">Add a New Contact</h2>
