--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,4 @@
-<p>not-found works!</p>
+
+<section class="bg-danger d-flex justify-content-center align-items-center b-0 m-0" >
+<h1 class="text-center  text-white-50">404</h1>
+</section>
