--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="p-2">
   <h1 #target class="text-center" >Contact List</h1>
   <section class="row">
     <section class="col">
